# Proyecto-1-BD2-

./: .clang-format  .clang-tidy  .dir-locals.el  CMakeLists.txt  README.md  Record.h  d10_3.csv  debug.ini  extendibleHash.h  file_out.csv  file_out2.csv  justfile  main.cpp  main1.cpp  meson.build  prueba.csv  prueba100.csv  prueba1000.csv  prueba10000.csv  prueba5000.csv  pruebaHash.csv  pruebaHash100.csv  pruebaHash200.csv  pruebaHash500.csv  r1_data.csv  rapidcsv.h  sequentialFile.cpp  sequentialFile.h
include/: attribute.hpp  base_relation.hpp  database.hpp  file_relation.hpp  index.hpp  memory_relation.hpp  meson.build  operations.hpp  parser.hpp  predicates.hpp  sequential_file.hpp
src/: attribute.cpp  attribute.hpp  base_relation.cpp  base_relation.hpp  database.cpp  database.hpp  file_relation.cpp  file_relation.hpp  index.cpp  main.cpp  memory_relation.cpp  memory_relation.hpp  meson.build  parser.cpp  predicates.cpp  relation.cpp  relation.hpp  sequential_file.cpp
tests/: meson.build  parser.cpp  potpourri.cpp
