project('BD2 - Proyecto 1', 'cpp',
        version : '0.0.1',
        license : 'GPL-3.0-or-later',
        default_options : [
                           'cpp_std=gnu++17',
                           'warning_level=3',
                           'werror=false'
        ])

inc = include_directories('include')

subdir('include')
subdir('src')
subdir('tests')
